# modern-embedding-bench

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-huggingface.yml
benchmark/: README.md
benchmark/fixtures/composed-media-retrieval-fixture-v0/: fixture.json
benchmark/models/: core.yaml
benchmark/research/: agent_memory_minispec_20260717.md  agent_skill_routing_compatibility_risk_minispec_20260721.md  api_smoke_evidence_20260716.md  code_context_retrieval_minispec_20260722.md  code_edit_chunk_requests_smoke_20260722.md  code_edit_chunk_requests_source_contract_20260722.json  composed_media_retrieval_minispec_20260722.md  gemini_embedding_2_contract_20260723.md  late_chunking_retrieval_minispec_20260720.md  learned_sparse_retrieval_dataset_minispec_20260721.md  local_openweight_candidates_20260721.md  voyage_4_nano_local_smoke_20260721.md
benchmark/runs/: api-coverage-smoke.yaml  api-modern-smoke.yaml  composed-media-retrieval-local-smoke.yaml  core-text-standard.yaml  late-chunking-retrieval-local-smoke.yaml  local-smoke.yaml  openai-smoke.yaml
benchmark/tasks/: core.yaml
configs/: default.yaml
legacy/: README.md
legacy/scripts/: compare_geevec_api_lite.py  data_viewer_app.py  generate_charts.py  rerun_failed.py  run_clip_eval.py  run_crosslingual_eval.py  run_crossmodal_hard.py  run_eval.py  run_fix_rerun.py  run_geevec_eval.py  run_ollama_eval.py  run_rerun_all.py  summarize_geevec_results.py
schemas/: model.schema.json  result.schema.json  run.schema.json  task.schema.json
scripts/: build_leaderboard.py  data_viewer_app.py  export_hf_dataset.py  export_hf_space.py  generate_charts.py  generate_data_viewer.py  generate_report.py  import_legacy_results.py  materialize_code_edit_source.py  prepare_cross_modal_data.py  prepare_crosslingual_data.py  prepare_mrl_data.py  prepare_needle_data.py  run_all_eval.py  run_api_eval.py  run_benchmark.py  run_eval_supplementary.py  run_fixed_eval.py  run_gemini_eval.py  run_gemini_full.py  run_local_eval.py  run_real_eval.py  upload_hf.py
src/mm_embed/: __init__.py  cache.py  cli.py  sparse_cache.py
src/mm_embed/benchmark/: __init__.py  leaderboard.py  registry.py  results.py  (+1 more)
tests/: test_agent_procedural_tool_memory.py  test_agent_skill_routing.py  test_benchmark_v2.py  test_code_edit_chunk_localization.py  test_code_edit_chunk_source_materializer.py  test_composed_media_retrieval.py  test_late_chunking_retrieval.py  test_provider_api_compat.py  test_sparse_provider_contract.py
(+54 files in other folders)
