[project]
name = "mm-embedding-bench"
version = "0.1.0"
description = "Multimodal Embedding Model Benchmark & Evaluation Framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "click>=8.0",
    "httpx>=0.27",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dashscope = ["dashscope>=1.20"]
volcengine = ["volcengine-python-sdk[ark]>=1.0"]
gemini = ["google-genai>=1.0"]
voyage = ["voyageai>=0.3"]
cohere = ["cohere>=5.0"]
openai = ["openai>=1.30"]
jina = ["httpx>=0.27"]
all = [
    "dashscope>=1.20",
    "volcengine-python-sdk[ark]>=1.0",
    "google-genai>=1.0",
    "voyageai>=0.3",
    "cohere>=5.0",
    "openai>=1.30",
]

[project.scripts]
mm-bench = "mm_embed.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mm_embed"]

[tool.ruff]
line-length = 120
target-version = "py310"
