[project]
name = "modern-embedding-bench"
version = "0.1.0"
description = "Modern embedding benchmark for emerging retrieval scenarios"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "click>=8.0",
    "httpx>=0.27",
    "tqdm>=4.66",
    "scipy>=1.12",
    "matplotlib>=3.10.8",
    "google-genai>=1.66.0",
    "voyageai>=0.3.7",
    "cohere>=5.20.7",
    "qwen-vl-utils>=0.0.14",
    "transformers>=4.57.0",
    "einops>=0.8.2",
    "torchvision>=0.25.0",
    "plotly>=6.6.0",
    "kaleido>=1.2.0",
    "huggingface-hub>=0.30",
]

[project.optional-dependencies]
data = ["datasets>=2.0"]
dashscope = ["dashscope>=1.20"]
volcengine = ["volcengine-python-sdk[ark]>=1.0"]
gemini = ["google-genai>=1.0"]
voyage = ["voyageai>=0.3"]
cohere = ["cohere>=5.0"]
openai = ["openai>=1.30"]
jina = ["httpx>=0.27"]
local = ["sentence-transformers>=3.0", "torch>=2.0"]
all = [
    "dashscope>=1.20",
    "volcengine-python-sdk[ark]>=1.0",
    "google-genai>=1.0",
    "voyageai>=0.3",
    "cohere>=5.0",
    "openai>=1.30",
]

[project.scripts]
modern-embed-bench = "mm_embed.cli:main"
mm-bench = "mm_embed.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mm_embed"]

[tool.ruff]
line-length = 120
target-version = "py310"
